# bhook

./: build.gradle
bytehook_sample/: build.gradle
bytehook_sample/src/main/cpp/: CMakeLists.txt  Vector3.cpp  Vector3.h  hacker.cpp  hookee.cpp
bytehook_sample/src/main/java/com/bytedance/android/bytehook/sample/: MyCustomApplication.java
